Added /fragments endpoint in webservice + canned fragments_by_* methods can also use webservice
